# scanner

./: .gitignore  CLAUDE.md  CMakeLists.txt  PLAN.md  README.md  build.sh  run_tests.sh  step_1.md  step_10.md  step_11.md  step_12.md  step_13_14.md  step_16.md  step_2.md  step_3.md  step_4.md  step_5.md  step_6_7.md  step_8.md  step_9.md  test_monitor.md  test_scan.md
include/app/: AppConfig.h  Application.h
include/cli/: Command.h  CommandLineParser.h
include/database/: CacheRepository.h  Database.h  ExclusionRepository.h  MonitorSessionRepository.h  QuarantineRepository.h  RepositoryUtils.h  ScanSessionRepository.h  SignatureRepository.h  WatchPathRepository.h
include/exclusions/: ExclusionService.h
include/logging/: Logger.h
include/quarantine/: QuarantineService.h
include/scan/: FileMetadataProvider.h  FileScanner.h  FileTraverser.h  FileWatcher.h  ScanService.h  ScanTypes.h
include/signatures/: SignatureService.h
launchd/: com.sentinel.scanner.agent.plist  com.sentinel.scanner.daemon.plist
src/: main.cpp
src/app/: AppConfig.cpp  Application.cpp
src/cli/: CommandLineParser.cpp
src/database/: CacheRepository.cpp  Database.cpp  ExclusionRepository.cpp  MonitorSessionRepository.cpp  QuarantineRepository.cpp  RepositoryUtils.cpp  ScanSessionRepository.cpp  SignatureRepository.cpp  WatchPathRepository.cpp
src/exclusions/: ExclusionService.cpp
src/logging/: Logger.cpp
src/quarantine/: QuarantineService.cpp
src/scan/: FileMetadataProvider.cpp  FileScanner.cpp  FileTraverser.cpp  FileWatcher.cpp  ScanService.cpp
src/signatures/: SignatureService.cpp
test-data/: blabla.txt  clean.txt  malicious.txt  symlink.txt
test-data/c_dir/: a.txt
test-data/subdir/: nested.txt
tests/: test_cache.cpp  test_cli.cpp  test_db.cpp  test_integration.cpp  test_scanner.cpp  test_traverser.cpp
